--- a/MedicineWareHouseIOS/MedicineWarehouse/Class/Main/AccountViewController.xib
+++ b/MedicineWareHouseIOS/MedicineWarehouse/Class/Main/AccountViewController.xib
@@ -42,14 +42,15 @@
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dtp-Af-Kb8">
                     <rect key="frame" x="87.5" y="485.5" width="200" height="30"/>
-                    <color key="backgroundColor" red="1" green="0.20039104269999999" blue="0.10521085299999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" red="0.13167259670000001" green="0.48916325649999998" blue="0.73994090030000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="200" id="S0P-fX-Ufe"/>
                         <constraint firstAttribute="height" constant="30" id="cv2-gd-TEb"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <state key="normal" title="退出登录">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="titleShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
                     <connections>
                         <action selector="Logout" destination="-1" eventType="touchUpInside" id="lLY-6O-i1p"/>
