--- a/MedicineWareHouseIOS/MedicineWarehouse/Class/Main/LoginViewController.xib
+++ b/MedicineWareHouseIOS/MedicineWarehouse/Class/Main/LoginViewController.xib
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -23,19 +24,25 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NuY-BV-LO7" userLabel="username">
-                    <rect key="frame" x="30" y="288.5" width="315" height="30"/>
+                    <rect key="frame" x="30" y="208.5" width="315" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="AWB-jQ-hvr"/>
+                    </constraints>
                     <nil key="textColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="U4v-sh-Arb" userLabel="password">
-                    <rect key="frame" x="30" y="368.5" width="315" height="30"/>
+                    <rect key="frame" x="30" y="308.5" width="315" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="y8N-b4-hAe"/>
+                    </constraints>
                     <nil key="textColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="账号" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="csL-Zo-Nd2">
-                    <rect key="frame" x="30" y="257.5" width="100" height="21"/>
+                    <rect key="frame" x="30" y="177.5" width="100" height="21"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="100" id="s39-ut-h6Q"/>
                     </constraints>
@@ -44,7 +51,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="96j-eL-bru">
-                    <rect key="frame" x="30" y="337.5" width="100" height="21"/>
+                    <rect key="frame" x="30" y="277.5" width="100" height="21"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="100" id="eLb-iW-soo"/>
                     </constraints>
@@ -53,18 +60,17 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UiH-AU-ala">
-                    <rect key="frame" x="314" y="418.5" width="31" height="30"/>
+                    <rect key="frame" x="308" y="378.5" width="37" height="34"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                     <state key="normal" title="注册"/>
                     <connections>
                         <action selector="SignIn" destination="-1" eventType="touchUpInside" id="ZAP-jw-hd9"/>
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LVu-GU-TdG">
-                    <rect key="frame" x="137.5" y="438.5" width="100" height="30"/>
+                    <rect key="frame" x="30" y="458.5" width="315" height="36"/>
                     <color key="backgroundColor" red="0.13167259667724598" green="0.48916325651082554" blue="0.73994090025906734" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="100" id="UZl-9J-VPb"/>
-                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <state key="normal" title="登录">
                         <color key="titleColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                     </state>
@@ -73,7 +79,7 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请登录" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6RL-7f-dMO">
-                    <rect key="frame" x="87.5" y="408.5" width="200" height="18"/>
+                    <rect key="frame" x="87.5" y="368.5" width="200" height="18"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="200" id="XfL-Sk-zxu"/>
                     </constraints>
@@ -89,16 +95,17 @@
                 <constraint firstItem="U4v-sh-Arb" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="30" id="IGG-7b-3Qh"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="NuY-BV-LO7" secondAttribute="trailing" constant="30" id="LzO-YU-7aJ"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="U4v-sh-Arb" secondAttribute="trailing" constant="30" id="NgE-Qa-280"/>
-                <constraint firstItem="LVu-GU-TdG" firstAttribute="top" secondItem="U4v-sh-Arb" secondAttribute="bottom" constant="40" id="OCB-lH-Chq"/>
+                <constraint firstItem="LVu-GU-TdG" firstAttribute="top" secondItem="U4v-sh-Arb" secondAttribute="bottom" constant="100" id="OCB-lH-Chq"/>
                 <constraint firstItem="96j-eL-bru" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="30" id="Vtz-5C-qsS"/>
                 <constraint firstItem="U4v-sh-Arb" firstAttribute="top" secondItem="96j-eL-bru" secondAttribute="bottom" constant="10" id="YEf-52-ace"/>
                 <constraint firstItem="6RL-7f-dMO" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="cML-nX-SWZ"/>
-                <constraint firstItem="LVu-GU-TdG" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="fmr-AR-zWd"/>
                 <constraint firstItem="NuY-BV-LO7" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="30" id="gyd-tX-FFy"/>
                 <constraint firstItem="UiH-AU-ala" firstAttribute="top" secondItem="U4v-sh-Arb" secondAttribute="bottom" constant="20" id="kio-ER-7z4"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="LVu-GU-TdG" secondAttribute="trailing" constant="30" id="nYC-an-kIn"/>
+                <constraint firstItem="LVu-GU-TdG" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="30" id="oKb-V0-en7"/>
                 <constraint firstItem="U4v-sh-Arb" firstAttribute="top" secondItem="NuY-BV-LO7" secondAttribute="bottom" constant="50" id="pNR-ck-OlT"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="UiH-AU-ala" secondAttribute="trailing" constant="30" id="pQ9-ay-otM"/>
-                <constraint firstItem="NuY-BV-LO7" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" constant="-30" id="q13-L9-5Dr"/>
+                <constraint firstItem="NuY-BV-LO7" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" constant="-100" id="q13-L9-5Dr"/>
                 <constraint firstItem="6RL-7f-dMO" firstAttribute="top" secondItem="U4v-sh-Arb" secondAttribute="bottom" constant="10" id="voJ-kc-0IT"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
