--- a/MedicineAndroid/app/src/main/res/layout/activity_main.xml
+++ b/MedicineAndroid/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,12 @@
         android:text="@string/title_home"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        app:layout_constraintBottom_toTopOf="@id/navigation"
+        />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
