--- a/MedicineAndroid/app/src/main/res/layout/fragment_first.xml
+++ b/MedicineAndroid/app/src/main/res/layout/fragment_first.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeFragment">
+    tools:context=".FirstFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="配置界面" />
+        android:text="操作界面" />
 
 </FrameLayout>
